version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/ConstructionLines/Point.rst.txt
.. vale off



:class:`Point`
==============

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.ConstructionLines.Point

   Bases: :py:obj:`object`


   
   A point in a ConstructionLine instance, may have an associated edge vertex.
















   ..
       !! processed by numpydoc !!




.. py:currentmodule:: Point

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__eq__`
            - op_Equality method.
          * - :py:attr:`~__ne__`
            - op_Inequality method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~Equivalent`
            - Checks to see if another point is equivalent to this one.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ConstructionLineId`
            - The ID of the associated ConstructionLine.
          * - :py:attr:`~Definition`
            - Definition property.
          * - :py:attr:`~IsRepresentation`
            - Check to see if there is a valid entity that this instance represents.
          * - :py:attr:`~Location`
            - Get the global location of this point.
          * - :py:attr:`~ObjectId`
            - Get the ID of the represented entity.
          * - :py:attr:`~Type`
            - Type property.







Property detail
---------------
.. py:property:: ConstructionLineId
   :type: Optional[int]


   
   The ID of the associated ConstructionLine.
















   ..
       !! processed by numpydoc !!

.. py:property:: Definition
   :type: Optional[Any]


   
   Definition property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsRepresentation
   :type: Optional[bool]


   
   Check to see if there is a valid entity that this instance represents.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Core.Math.Point3D]


   
   Get the global location of this point.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   Get the ID of the represented entity.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[Ansys.Mechanical.DataModel.ConstructionLines.PointType]


   
   Type property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(other: Ansys.Mechanical.DataModel.ConstructionLines.Point) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equivalent(other: Ansys.Mechanical.DataModel.ConstructionLines.Point) -> bool

   
   Checks to see if another point is equivalent to this one.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: __eq__(left: Ansys.Mechanical.DataModel.ConstructionLines.Point, right: Ansys.Mechanical.DataModel.ConstructionLines.Point) -> bool
   :classmethod:


   
   op_Equality method.

   ..
       !! processed by numpydoc !!

.. py:method:: __ne__(left: Ansys.Mechanical.DataModel.ConstructionLines.Point, right: Ansys.Mechanical.DataModel.ConstructionLines.Point) -> bool
   :classmethod:


   
   op_Inequality method.

   ..
       !! processed by numpydoc !!



.. vale on